tests/config_untyped/config_untyped.exp
Error -------------------------------------------------------------- test.js:6:2

Cannot cast `typed` to number because string is incompatible with number.

Error: test.js:6
  6: (typed: number); // error: string ~> number
      ^^^^^ Cannot cast `typed` to number because string [1] is incompatible with number [2].
  References:
    5: module.exports = "foo";
                        ^^^^^ [1]: string. See: typed/foo.js:5
    6: (typed: number); // error: string ~> number
               ^^^^^^ [2]: number

Error ------------------------------------------------------------- test.js:9:29

Cannot resolve module `./untyped/bogus`.

Error: test.js:9
  9: const nonexistent = require('./untyped/bogus'); // error, missing module
                                 ^^^^^^^^^^^^^^^^^ Cannot resolve module `./untyped/bogus`.

Error --------------------------------------------------------- typed/foo.js:3:2

Cannot cast `"string"` to number because string is incompatible with number.

Error: typed/foo.js:3
  3: ("string": number); // Error
      ^^^^^^^^ Cannot cast `"string"` to number because string [1] is incompatible with number [2].
  References:
    3: ("string": number); // Error
        ^^^^^^^^ [1]: string
    3: ("string": number); // Error
                  ^^^^^^ [2]: number


Found 3 errors
